Update fix for zoom on mobile double clicks

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html {
 
 body {
 	text-align: center;
+	touch-action: manipulation;
 }
 
 .container {
